tools/fleet/fixtures/packets/invalid/worktree-lane-mismatch.case
source=valid-work.packet
mutation=set Worktree and Launch-Command to another persistent lane ID
expected=invalid
